Fix z-index on drawer

--- a/src/less/drawer.less
+++ b/src/less/drawer.less
@@ -5,6 +5,7 @@
   top: -100%;
   left: 0;
   right: 0;
+  z-index: 6000;
   background: @color-a500;
   overflow: auto;
   display: flex;
